istio/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports":[{"port":80,"targetPort":8080,"nodePort":30000}],"selector":{"istio":"ingressgateway"},"type":"NodePort"}}
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080  
      nodePort: 30000   
  selector:
    istio: ingressgateway
