istio/gke-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    # → Enable container-native Load Balancing (NEGs) on GKE:
    cloud.google.com/neg: '{"exposed_ports":{"80":{},"443":{}}}'
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
